# OpenGL_Testing

./: CMakeLists.txt  README.md
models/airplane/: scene.gltf
shaders/: asteroid.vert  default.geom  grass.frag  light.frag  light.vert  outlining.vert  skybox.frag  skybox.vert  window.frag
src/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
